Runtime/Script/MyLangParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 3.4
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// $ANTLR 3.4 C:\\Users\\vorsters.SFTREAL\\workspace\\ANTLR-MyLanguage\\src\\PlayingWithDLR\\MyScriptRuntime\\MyLangParser.g 2012-01-09 13:06:12

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162
// Missing XML comment for publicly visible type or member 'Type_or_Member'
#pragma warning disable 1591
// CLS compliance checking will not be performed on 'type' because it is not visible from outside this assembly.
#pragma warning disable 3019


using System.Collections.Generic;
using Antlr.Runtime;
using Antlr.Runtime.Misc;


using Antlr.Runtime.Tree;
using RewriteRuleITokenStream = Antlr.Runtime.Tree.RewriteRuleTokenStream;

namespace  MyLang.Runtime.Script 
{
[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.4")]
[System.CLSCompliant(false)]
public partial class MyLangParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "ASSIGN", "BLOCKSTMT", "CALL", "COLON", "COMMA", "COMMENT", "DECLARE", "DIGIT", "DIVIDE", "DOT", "ELSE", "ENDP", "EQUALS", "EXPONENT", "FLOAT", "FUNCCALL", "FUNCDECL", "FUNCTION", "GT", "GTEQ", "IDENTIFIER", "IF", "INT", "LCLETTER", "LCURLY", "LPAREN", "LT", "LTEQ", "MINUS", "MULTIPLY", "NEGATE", "OR", "PLUS", "PROGDECL", "PROGRAM", "RCURLY", "RETURN", "RPAREN", "RUN", "RUNPROG", "SEMI", "THEN", "UCLETTER", "USCORE", "VAR", "WHILE", "WS"
	};
	public const int EOF=-1;
	public const int AND=4;
	public const int ASSIGN=5;
	public const int BLOCKSTMT=6;
	public const int CALL=7;
	public const int COLON=8;
	public const int COMMA=9;
	public const int COMMENT=10;
	public const int DECLARE=11;
	public const int DIGIT=12;
	public const int DIVIDE=13;
	public const int DOT=14;
	public const int ELSE=15;
	public const int ENDP=16;
	public const int EQUALS=17;
	public const int EXPONENT=18;
	public const int FLOAT=19;
	public const int FUNCCALL=20;
	public const int FUNCDECL=21;
	public const int FUNCTION=22;
	public const int GT=23;
	public const int GTEQ=24;
	public const int IDENTIFIER=25;
	public const int IF=26;
	public const int INT=27;
	public const int LCLETTER=28;
	public const int LCURLY=29;
	public const int LPAREN=30;
	public const int LT=31;
	public const int LTEQ=32;
	public const int MINUS=33;
	public const int MULTIPLY=34;
	public const int NEGATE=35;
	public const int OR=36;
	public const int PLUS=37;
	public const int PROGDECL=38;
	public const int PROGRAM=39;
	public const int RCURLY=40;
	public const int RETURN=41;
	public const int RPAREN=42;
	public const int RUN=43;
	public const int RUNPROG=44;
	public const int SEMI=45;
	public const int THEN=46;
	public const int UCLETTER=47;
	public const int USCORE=48;
	public const int VAR=49;
	public const int WHILE=50;
	public const int WS=51;

	public MyLangParser(ITokenStream input)
		: this(input, new RecognizerSharedState())
	{
	}
	public MyLangParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		ITreeAdaptor treeAdaptor = default(ITreeAdaptor);
		CreateTreeAdaptor(ref treeAdaptor);
		TreeAdaptor = treeAdaptor ?? new CommonTreeAdaptor();
		OnCreated();
	}
	// Implement this function in your helper file to use a custom tree adaptor
	partial void CreateTreeAdaptor(ref ITreeAdaptor adaptor);

	private ITreeAdaptor adaptor;

	public ITreeAdaptor TreeAdaptor
	{
		get
		{
			return adaptor;
		}

		set
		{
			this.adaptor = value;
		}
	}

	public override string[] TokenNames { get { return MyLangParser.tokenNames; } }
	public override string GrammarFileName { get { return "C:\\Users\\vorsters.SFTREAL\\workspace\\ANTLR-MyLanguage\\src\\PlayingWithDLR\\MyScriptRuntime\\MyLangParser.g"; } }


	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules
	partial void EnterRule_identifier();
	partial void LeaveRule_identifier();

	// $ANTLR start "identifier"
	// C:\\Users\\vorsters.SFTREAL\\workspace\\ANTLR-MyLanguage\\src\\PlayingWithDLR\\MyScriptRuntime\\MyLangParser.g:25:1: identifier : IDENTIFIER ^;
	[GrammarRule("identifier")]
	private AstParserRuleReturnScope<CommonTree, IToken> identifier()
	{
		EnterRule_identifier();
		EnterRule("identifier", 1);
		TraceIn("identifier", 1);
		AstParserRuleReturnScope<CommonTree, IToken> retval = new AstParserRuleReturnScope<CommonTree, IToken>();
		retval.Start = (IToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		IToken IDENTIFIER1 = default(IToken);

		CommonTree IDENTIFIER1_tree = default(CommonTree);
		try { DebugEnterRule(GrammarFileName, "identifier");
		DebugLocation(25, 14);
		try
		{
			// C:\\Users\\vorsters.SFTREAL\\workspace\\ANTLR-MyLanguage\\src\\PlayingWithDLR\\MyScriptRuntime\\MyLangParser.g:26:2: ( IDENTIFIER ^)
			DebugEnterAlt(1);
			// C:\\Users\\vorsters.SFTREAL\\workspace\\ANTLR-MyLanguage\\src\\PlayingWithDLR\\MyScriptRuntime\\MyLangParser.g:26:4: IDENTIFIER ^
			{
			root_0 = (CommonTree)adaptor.Nil();

			DebugLocation(26, 14);
			IDENTIFIER1=(IToken)Match(input,IDENTIFIER,Follow._IDENTIFIER_in_identifier137); if (state.failed) return retval;
			if (state.backtracking == 0) {
			IDENTIFIER1_tree = (CommonTree)adaptor.Create(IDENTIFIER1);
			root_0 = (CommonTree)adaptor.BecomeRoot(IDENTIFIER1_tree, root_0);
			}

			}

			retval.Stop = (IToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("identifier", 1);
			LeaveRule("identifier", 1);
			LeaveRule_identifier();
		}
		DebugLocation(26, 14);
		} finally { DebugExitRule(GrammarFileName, "identifier"); }
		return retval;

	}
	// $ANTLR end "identifier"

	partial void EnterRule_runprogram();
	partial void LeaveRule_runprogram();

	// $ANTLR start "runprogram"
	// C:\\Users\\vorsters.SFTREAL\\workspace\\ANTLR-MyLanguage\\src\\PlayingWithDLR\\MyScriptRuntime\\MyLangParser.g:28:8: public runprogram : ( WS )? RUN WS PROGRAM WS IDENTIFIER ( WS )? ( ENDP | EOF ) -> ^( RUNPROG IDENTIFIER ) ;
	[GrammarRule("runprogram")]
	public AstParserRuleReturnScope<CommonTree, IToken> runprogram()
	{
		EnterRule_runprogram();
		EnterRule("runprogram", 2);
		TraceIn("runprogram", 2);
		AstParserRuleReturnScope<CommonTree, IToken> retval = new AstParserRuleReturnScope<CommonTree, IToken>();
		retval.Start = (IToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		IToken WS2 = default(IToken);
		IToken RUN3 = default(IToken);
		IToken WS4 = default(IToken);
		IToken PROGRAM5 = default(IToken);
		IToken WS6 = default(IToken);
		IToken IDENTIFIER7 = default(IToken);
		IToken WS8 = default(IToken);
		IToken ENDP9 = default(IToken);
		IToken EOF10 = default(IToken);

		CommonTree WS2_tree = default(CommonTree);
		CommonTree RUN3_tree = default(CommonTree);
		CommonTree WS4_tree = default(CommonTree);
		CommonTree PROGRAM5_tree = default(CommonTree);
		CommonTree WS6_tree = default(CommonTree);
		CommonTree IDENTIFIER7_tree = default(CommonTree);
		CommonTree WS8_tree = default(CommonTree);
		CommonTree ENDP9_tree = default(CommonTree);
		CommonTree EOF10_tree = default(CommonTree);
		RewriteRuleITokenStream stream_ENDP=new RewriteRuleITokenStream(adaptor,"token ENDP");
		RewriteRuleITokenStream stream_RUN=new RewriteRuleITokenStream(adaptor,"token RUN");
		RewriteRuleITokenStream stream_PROGRAM=new RewriteRuleITokenStream(adaptor,"token PROGRAM");
		RewriteRuleITokenStream stream_WS=new RewriteRuleITokenStream(adaptor,"token WS");
		RewriteRuleITokenStream stream_EOF=new RewriteRuleITokenStream(adaptor,"token EOF");
		RewriteRuleITokenStream stream_IDENTIFIER=new RewriteRuleITokenStream(adaptor,"token IDENTIFIER");
		try { DebugEnterRule(GrammarFileName, "runprogram");
		DebugLocation(28, 80);
		try
		{
			// C:\\Users\\vorsters.SFTREAL\\workspace\\ANTLR-MyLanguage\\src\\PlayingWithDLR\\MyScriptRuntime\\MyLangParser.g:29:5: ( ( WS )? RUN WS PROGRAM WS IDENTIFIER ( WS )? ( ENDP | EOF ) -> ^( RUNPROG IDENTIFIER ) )
			DebugEnterAlt(1);
			// C:\\Users\\vorsters.SFTREAL\\workspace\\ANTLR-MyLanguage\\src\\PlayingWithDLR\\MyScriptRuntime\\MyLangParser.g:29:7: ( WS )? RUN WS PROGRAM WS IDENTIFIER ( WS )? ( ENDP | EOF )
			{
			DebugLocation(29, 7);
			// C:\\Users\\vorsters.SFTREAL\\workspace\\ANTLR-MyLanguage\\src\\PlayingWithDLR\\MyScriptRuntime\\MyLangParser.g:29:7: ( WS )?
			int alt1=2;
			try { DebugEnterSubRule(1);
			try { DebugEnterDecision(1, false);
			int LA1_0 = input.LA(1);

			if ((LA1_0==WS))
			{
				alt1 = 1;
			}
			} finally { DebugExitDecision(1); }
			switch (alt1)
			{
			case 1:
				DebugEnterAlt(1);
				// C:\\Users\\vorsters.SFTREAL\\workspace\\ANTLR-MyLanguage\\src\\PlayingWithDLR\\MyScriptRuntime\\MyLangParser.g:29:7: WS
				{
				DebugLocation(29, 7);
				WS2=(IToken)Match(input,WS,Follow._WS_in_runprogram153); if (state.failed) return retval; 
				if (state.backtracking == 0) stream_WS.Add(WS2);


				}
				break;

			}
			} finally { DebugExitSubRule(1); }

			DebugLocation(29, 11);
			RUN3=(IToken)Match(input,RUN,Follow._RUN_in_runprogram156); if (state.failed) return retval; 
			if (state.backtracking == 0) stream_RUN.Add(RUN3);

			DebugLocation(29, 15);
			WS4=(IToken)Match(input,WS,Follow._WS_in_runprogram158); if (state.failed) return retval; 
			if (state.backtracking == 0) stream_WS.Add(WS4);

			DebugLocation(29, 18);
			PROGRAM5=(IToken)Match(input,PROGRAM,Follow._PROGRAM_in_runprogram160); if (state.failed) return retval; 
			if (state.backtracking == 0) stream_PROGRAM.Add(PROGRAM5);

			DebugLocation(29, 26);
			WS6=(IToken)Match(input,WS,Follow._WS_in_runprogram162); if (state.failed) return retval; 
			if (state.backtracking == 0) stream_WS.Add(WS6);

			DebugLocation(29, 29);
			IDENTIFIER7=(IToken)Match(input,IDENTIFIER,Follow._IDENTIFIER_in_runprogram164); if (state.failed) return retval; 
			if (state.backtracking == 0) stream_IDENTIFIER.Add(IDENTIFIER7);

			DebugLocation(29, 40);
			// C:\\Users\\vorsters.SFTREAL\\workspace\\ANTLR-MyLanguage\\src\\PlayingWithDLR\\MyScriptRuntime\\MyLangParser.g:29:40: ( WS )?
			int alt2=2;
			try { DebugEnterSubRule(2);
			try { DebugEnterDecision(2, false);
			int LA2_0 = input.LA(1);

			if ((LA2_0==WS))
			{
				alt2 = 1;
			}
			} finally { DebugExitDecision(2); }
			switch (alt2)
			{
			case 1:
				DebugEnterAlt(1);
				// C:\\Users\\vorsters.SFTREAL\\workspace\\ANTLR-MyLanguage\\src\\PlayingWithDLR\\MyScriptRuntime\\MyLangParser.g:29:40: WS
				{
				DebugLocation(29, 40);
				WS8=(IToken)Match(input,WS,Follow._WS_in_runprogram166); if (state.failed) return retval; 
				if (state.backtracking == 0) stream_WS.Add(WS8);


				}
				break;

			}
			} finally { DebugExitSubRule(2); }

			DebugLocation(29, 44);
			// C:\\Users\\vorsters.SFTREAL\\workspace\\ANTLR-MyLanguage\\src\\PlayingWithDLR\\MyScriptRuntime\\MyLangParser.g:29:44: ( ENDP | EOF )
			int alt3=2;
			try { DebugEnterSubRule(3);
			try { DebugEnterDecision(3, false);
			int LA3_0 = input.LA(1);

			if ((LA3_0==ENDP))
			{
				alt3 = 1;
			}
			else if ((LA3_0==EOF))
			{
				alt3 = 2;
			}
			else
			{
				if (state.backtracking>0) {state.failed=true; return retval;}
				NoViableAltException nvae = new NoViableAltException("", 3, 0, input);
				DebugRecognitionException(nvae);
				throw nvae;
			}
			} finally { DebugExitDecision(3); }
			switch (alt3)
			{
			case 1:
				DebugEnterAlt(1);
				// C:\\Users\\vorsters.SFTREAL\\workspace\\ANTLR-MyLanguage\\src\\PlayingWithDLR\\MyScriptRuntime\\MyLangParser.g:29:45: ENDP
				{
				DebugLocation(29, 45);
				ENDP9=(IToken)Match(input,ENDP,Follow._ENDP_in_runprogram170); if (state.failed) return retval; 
				if (state.backtracking == 0) stream_ENDP.Add(ENDP9);


				}
				break;
			case 2:
				DebugEnterAlt(2);
				// C:\\Users\\vorsters.SFTREAL\\workspace\\ANTLR-MyLanguage\\src\\PlayingWithDLR\\MyScriptRuntime\\MyLangParser.g:29:52: EOF
				{
				DebugLocation(29, 52);
				EOF10=(IToken)Match(input,EOF,Follow._EOF_in_runprogram174); if (state.failed) return retval; 
				if (state.backtracking == 0) stream_EOF.Add(EOF10);


				}
				break;

			}
			} finally { DebugExitSubRule(3); }



			{
			// AST REWRITE
			// elements: IDENTIFIER
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if (state.backtracking == 0) {
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (CommonTree)adaptor.Nil();
			// 29:57: -> ^( RUNPROG IDENTIFIER )
			{
				DebugLocation(29, 60);
				// C:\\Users\\vorsters.SFTREAL\\workspace\\ANTLR-MyLanguage\\src\\PlayingWithDLR\\MyScriptRuntime\\MyLangParser.g:29:60: ^( RUNPROG IDENTIFIER )
				{
				CommonTree root_1 = (CommonTree)adaptor.Nil();
				DebugLocation(29, 62);
				root_1 = (CommonTree)adaptor.BecomeRoot((CommonTree)adaptor.Create(RUNPROG, "RUNPROG"), root_1);

				DebugLocation(29, 70);
				adaptor.AddChild(root_1, stream_IDENTIFIER.NextNode());

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}
			}

			}

			retval.Stop = (IToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("runprogram", 2);
			LeaveRule("runprogram", 2);
			LeaveRule_runprogram();
		}
		DebugLocation(29, 80);
		} finally { DebugExitRule(GrammarFileName, "runprogram"); }
		return retval;

	}
	// $ANTLR end "runprogram"

	partial void EnterRule_program();
	partial void LeaveRule_program();

	// $ANTLR start "program"
	// C:\\Users\\vorsters.SFTREAL\\workspace\\ANTLR-MyLanguage\\src\\PlayingWithDLR\\MyScriptRuntime\\MyLangParser.g:31:8: public program : ( WS )? DECLARE WS PROGRAM ( WS )? COLON WS identifier ( WS )? LCURLY ( WS )? ( funcdecl )* ( WS )? blockstatement ( WS )? RCURLY ( WS )? ( ENDP | EOF ) -> ^( PROGDECL identifier ( funcdecl )* blockstatement ) ;
	[GrammarRule("program")]
	public AstParserRuleReturnScope<CommonTree, IToken> program()
	{
		EnterRule_program();
		EnterRule("program", 3);
		TraceIn("program", 3);
		AstParserRuleReturnScope<CommonTree, IToken> retval = new AstParserRuleReturnScope<CommonTree, IToken>();
		retval.Start = (IToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		IToken WS11 = default(IToken);
		IToken DECLARE12 = default(IToken);
		IToken WS13 = default(IToken);
		IToken PROGRAM14 = default(IToken);
		IToken WS15 = default(IToken);
		IToken COLON16 = default(IToken);
		IToken WS17 = default(IToken);
		IToken WS19 = default(IToken);
		IToken LCURLY20 = default(IToken);
		IToken WS21 = default(IToken);
		IToken WS23 = default(IToken);
		IToken WS25 = default(IToken);
		IToken RCURLY26 = default(IToken);
		IToken WS27 = default(IToken);
		IToken ENDP28 = default(IToken);
		IToken EOF29 = default(IToken);
		AstParserRuleReturnScope<CommonTree, IToken> identifier18 = default(AstParserRuleReturnScope<CommonTree, IToken>);
		AstParserRuleReturnScope<CommonTree, IToken> funcdecl22 = default(AstParserRuleReturnScope<CommonTree, IToken>);
		AstParserRuleReturnScope<CommonTree, IToken> blockstatement24 = default(AstParserRuleReturnScope<CommonTree, IToken>);

		CommonTree WS11_tree = default(CommonTree);
		CommonTree DECLARE12_tree = default(CommonTree);
		CommonTree WS13_tree = default(CommonTree);
		CommonTree PROGRAM14_tree = default(CommonTree);
		CommonTree WS15_tree = default(CommonTree);
		CommonTree COLON16_tree = default(CommonTree);
		CommonTree WS17_tree = default(CommonTree);
		CommonTree WS19_tree = default(CommonTree);
		CommonTree LCURLY20_tree = default(CommonTree);
		CommonTree WS21_tree = default(CommonTree);
		CommonTree WS23_tree = default(CommonTree);
		CommonTree WS25_tree = default(CommonTree);
		CommonTree RCURLY26_tree = default(CommonTree);
		CommonTree WS27_tree = default(CommonTree);
		CommonTree ENDP28_tree = default(CommonTree);
		CommonTree EOF29_tree = default(CommonTree);
		RewriteRuleITokenStream stream_COLON=new RewriteRuleITokenStream(adaptor,"token COLON");
		RewriteRuleITokenStream stream_ENDP=new RewriteRuleITokenStream(adaptor,"token ENDP");
		RewriteRuleITokenStream stream_DECLARE=new RewriteRuleITokenStream(adaptor,"token DECLARE");
		RewriteRuleITokenStream stream_PROGRAM=new RewriteRuleITokenStream(adaptor,"token PROGRAM");
		RewriteRuleITokenStream stream_LCURLY=new RewriteRuleITokenStream(adaptor,"token LCURLY");
		RewriteRuleITokenStream stream_WS=new RewriteRuleITokenStream(adaptor,"token WS");
		RewriteRuleITokenStream stream_EOF=new RewriteRuleITokenStream(adaptor,"token EOF");
		RewriteRuleITokenStream stream_RCURLY=new RewriteRuleITokenStream(adaptor,"token RCURLY");
		RewriteRuleSubtreeStream stream_blockstatement=new RewriteRuleSubtreeStream(adaptor,"rule blockstatement");
		RewriteRuleSubtreeStream stream_identifier=new RewriteRuleSubtreeStream(adaptor,"rule identifier");
		RewriteRuleSubtreeStream stream_funcdecl=new RewriteRuleSubtreeStream(adaptor,"rule funcdecl");
		try { DebugEnterRule(GrammarFileName, "program");
		DebugLocation(31, 176);
		try
		{
			// C:\\Users\\vorsters.SFTREAL\\workspace\\ANTLR-MyLanguage\\src\\PlayingWithDLR\\MyScriptRuntime\\MyLangParser.g:32:5: ( ( WS )? DECLARE WS PROGRAM ( WS )? COLON WS identifier ( WS )? LCURLY ( WS )? ( funcdecl )* ( WS )? blockstatement ( WS )? RCURLY ( WS )? ( ENDP | EOF ) -> ^( PROGDECL identifier ( funcdecl )* blockstatement ) )
			DebugEnterAlt(1);
			// C:\\Users\\vorsters.SFTREAL\\workspace\\ANTLR-MyLanguage\\src\\PlayingWithDLR\\MyScriptRuntime\\MyLangParser.g:33:7: ( WS )? DECLARE WS PROGRAM ( WS )? COLON WS identifier ( WS )? LCURLY ( WS )? ( funcdecl )* ( WS )? blockstatement ( WS )? RCURLY ( WS )? ( ENDP | EOF )
			{
			DebugLocation(33, 7);
			// C:\\Users\\vorsters.SFTREAL\\workspace\\ANTLR-MyLanguage\\src\\PlayingWithDLR\\MyScriptRuntime\\MyLangParser.g:33:7: ( WS )?
			int alt4=2;
			try { DebugEnterSubRule(4);
			try { DebugEnterDecision(4, false);
			int LA4_0 = input.LA(1);

			if ((LA4_0==WS))
			{
				alt4 = 1;
			}
			} finally { DebugExitDecision(4); }
			switch (alt4)
			{
			case 1:
				DebugEnterAlt(1);
				// C:\\Users\\vorsters.SFTREAL\\workspace\\ANTLR-MyLanguage\\src\\PlayingWithDLR\\MyScriptRuntime\\MyLangParser.g:33:7: WS
				{
				DebugLocation(33, 7);
				WS11=(IToken)Match(input,WS,Follow._WS_in_program204); if (state.failed) return retval; 
				if (state.backtracking == 0) stream_WS.Add(WS11);


				}
				break;

			}
			} finally { DebugExitSubRule(4); }

			DebugLocation(33, 11);
			DECLARE12=(IToken)Match(input,DECLARE,Follow._DECLARE_in_program207); if (state.failed) return retval; 
			if (state.backtracking == 0) stream_DECLARE.Add(DECLARE12);

			DebugLocation(33, 19);
			WS13=(IToken)Match(input,WS,Follow._WS_in_program209); if (state.failed) return retval; 
			if (state.backtracking == 0) stream_WS.Add(WS13);

			DebugLocation(33, 22);
			PROGRAM14=(IToken)Match(input,PROGRAM,Follow._PROGRAM_in_program211); if (state.failed) return retval; 
			if (state.backtracking == 0) stream_PROGRAM.Add(PROGRAM14);

			DebugLocation(33, 30);
			// C:\\Users\\vorsters.SFTREAL\\workspace\\ANTLR-MyLanguage\\src\\PlayingWithDLR\\MyScriptRuntime\\MyLangParser.g:33:30: ( WS )?
			int alt5=2;
			try { DebugEnterSubRule(5);
			try { DebugEnterDecision(5, false);
			int LA5_0 = input.LA(1);

			if ((LA5_0==WS))
			{
				alt5 = 1;
			}
			} finally { DebugExitDecision(5); }
			switch (alt5)
			{
			case 1:
				DebugEnterAlt(1);
				// C:\\Users\\vorsters.SFTREAL\\workspace\\ANTLR-MyLanguage\\src\\PlayingWithDLR\\MyScriptRuntime\\MyLangParser.g:33:30: WS
				{
				DebugLocation(33, 30);
				WS15=(IToken)Match(input,WS,Follow._WS_in_program213); if (state.failed) return retval; 
				if (state.backtracking == 0) stream_WS.Add(WS15);


				}
				break;

			}
			} finally { DebugExitSubRule(5); }

			DebugLocation(33, 34);
			COLON16=(IToken)Match(input,COLON,Follow._COLON_in_program216); if (state.failed) return retval; 
			if (state.backtracking == 0) stream_COLON.Add(COLON16);

			DebugLocation(33, 40);
			WS17=(IToken)Match(input,WS,Follow._WS_in_program218); if (state.failed) return retval; 
			if (state.backtracking == 0) stream_WS.Add(WS17);

			DebugLocation(33, 43);
			PushFollow(Follow._identifier_in_program220);
			identifier18=identifier();
			PopFollow();
			if (state.failed) return retval;
			if (state.backtracking == 0) stream_identifier.Add(identifier18.Tree);
			DebugLocation(33, 54);
			// C:\\Users\\vorsters.SFTREAL\\workspace\\ANTLR-MyLanguage\\src\\PlayingWithDLR\\MyScriptRuntime\\MyLangParser.g:33:54: ( WS )?
			int alt6=2;
			try { DebugEnterSubRule(6);
			try { DebugEnterDecision(6, false);
			int LA6_0 = input.LA(1);

			if ((LA6_0==WS))
			{
				alt6 = 1;
			}
			} finally { DebugExitDecision(6); }
			switch (alt6)
			{
			case 1:
				DebugEnterAlt(1);
				// C:\\Users\\vorsters.SFTREAL\\workspace\\ANTLR-MyLanguage\\src\\PlayingWithDLR\\MyScriptRuntime\\MyLangParser.g:33:54: WS
				{
				DebugLocation(33, 54);
				WS19=(IToken)Match(input,WS,Follow._WS_in_program222); if (state.failed) return retval; 
				if (state.backtracking == 0) stream_WS.Add(WS19);


				}
				break;

			}
			} finally { DebugExitSubRule(6); }

			DebugLocation(33, 58);
			LCURLY20=(IToken)Match(input,LCURLY,Follow._LCURLY_in_program225); if (state.failed) return retval; 
			if (state.backtracking == 0) stream_LCURLY.Add(LCURLY20);

			DebugLocation(33, 65);
			// C:\\Users\\vorsters.SFTREAL\\workspace\\ANTLR-MyLanguage\\src\\PlayingWithDLR\\MyScriptRuntime\\MyLangParser.g:33:65: ( WS )?
			int alt7=2;
			try { DebugEnterSubRule(7);
			try { DebugEnterDecision(7, false);
			int LA7_0 = input.LA(1);

			if ((LA7_0==WS))
			{
				int LA7_1 = input.LA(2);

				if ((EvaluatePredicate(synpred7_MyLangParser_fragment)))
				{
					alt7 = 1;
				}
			}
			} finally { DebugExitDecision(7); }
			switch (alt7)
			{
			case 1:
				DebugEnterAlt(1);
				// C:\\Users\\vorsters.SFTREAL\\workspace\\ANTLR-MyLanguage\\src\\PlayingWithDLR\\MyScriptRuntime\\MyLangParser.g:33:65: WS
				{
				DebugLocation(33, 65);
				WS21=(IToken)Match(input,WS,Follow._WS_in_program227); if (state.failed) return retval; 
				if (state.backtracking == 0) stream_WS.Add(WS21);


				}
				break;

			}
			} finally { DebugExitSubRule(7); }

			DebugLocation(33, 69);
			// C:\\Users\\vorsters.SFTREAL\\workspace\\ANTLR-MyLanguage\\src\\PlayingWithDLR\\MyScriptRuntime\\MyLangParser.g:33:69: ( funcdecl )*
			try { DebugEnterSubRule(8);
			while (true)
			{
				int alt8=2;
				try { DebugEnterDecision(8, false);
				int LA8_0 = input.LA(1);

				if ((LA8_0==WS))
				{
					int LA8_1 = input.LA(2);

					if ((LA8_1==DECLARE))
					{
						alt8 = 1;
					}


				}
				else if ((LA8_0==DECLARE))
				{
					alt8 = 1;
				}


				} finally { DebugExitDecision(8); }
				switch ( alt8 )
				{
				case 1:
					DebugEnterAlt(1);
					// C:\\Users\\vorsters.SFTREAL\\workspace\\ANTLR-MyLanguage\\src\\PlayingWithDLR\\MyScriptRuntime\\MyLangParser.g:33:69: funcdecl
					{
					DebugLocation(33, 69);
					PushFollow(Follow._funcdecl_in_program230);
					funcdecl22=funcdecl();
					PopFollow();
					if (state.failed) return retval;
					if (state.backtracking == 0) stream_funcdecl.Add(funcdecl22.Tree);

					}
					break;

				default:
					goto loop8;
				}
			}

			loop8:
				;

			} finally { DebugExitSubRule(8); }

			DebugLocation(33, 79);
			// C:\\Users\\vorsters.SFTREAL\\workspace\\ANTLR-MyLanguage\\src\\PlayingWithDLR\\MyScriptRuntime\\MyLangParser.g:33:79: ( WS )?
			int alt9=2;
			try { DebugEnterSubRule(9);
			try { DebugEnterDecision(9, false);
			int LA9_0 = input.LA(1);

			if ((LA9_0==WS))
			{
				alt9 = 1;
			}
			} finally { DebugExitDecision(9); }
			switch (alt9)
			{
			case 1:
				DebugEnterAlt(1);
				// C:\\Users\\vorsters.SFTREAL\\workspace\\ANTLR-MyLanguage\\src\\PlayingWithDLR\\MyScriptRuntime\\MyLangParser.g:33:79: WS
				{
				DebugLocation(33, 79);
				WS23=(IToken)Match(input,WS,Follow._WS_in_program233); if (state.failed) return retval; 
				if (state.backtracking == 0) stream_WS.Add(WS23);


				}
				break;

			}
			} finally { DebugExitSubRule(9); }
